--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "concurrently": "^5.1.0",
+    "heroku": "^7.59.2",
     "json-server": "^0.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "node": "^16.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
