--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "node": "^16.13.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "concurrently": "^5.1.0",
@@ -15,7 +16,6 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
-    "node": "^16.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
