--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "engines": {
+    "npm": ">=7.20.0",
+    "node": ">=16.13.1"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
